src/main/resources/static/css/custom.css
h1 {
	font-size: 2em;
}

.form-group input.form-size-small {
	width: 45px;
	text-align: center;
	display: inline;
}

.label-as-badge {
	border-radius: 1em;
}

.big-badge {
	font-size: 15px;
}

.bold {
	font-weight: bold;
}

.vcenter {
	display: inline-block;
	vertical-align: middle;
	float: none;
}

.button-bar {
	padding-top: 14px;
}

.list-group-item {
	background-color: mintcream;
}

.goal_padding {
	padding-top: 0px;
	padding-bottom: 5px;
}

.goal_padding_bigger {
	padding-top: 3px;
	padding-bottom: 13px;
}

.no-left-right-padding {
	padding-left: 0px;
	padding-right: 0px;
}

.goal-badges {
	padding-left: 8px;
	padding-right: 0px;
}

.no-right-padding {
	padding-right: 0px;
}

.center {
	text-align: center;
}

.right {
	float: right;
}

.ranking-name {
	font-size: 16px;
	vertical-align: sub;
	padding-left: 20px;
}

.label.ranking {
	font-size: 100%;
}

.panel-heading.user {
	font-weight: bold;
}

.panel-body.user-panel-body {
	height: 70px;
	background-color: lavender;
}

.custom-button-group {
	float: right;
	padding-right: 15px;
}

.teamName {
	font-size: 1.4em;
}

.user-label {
	font-size: 1.3em;
	padding-top: 7px;
}

.currentTime {
	font-size: 1.2em;
}

.table th, td {
	text-align: center;
}

img.flag {
	vertical-align: baseline;
}

/* For earlier break collapse in navbar */
@media ( max-width : 1200px) {
	.navbar-header {
		float: none;
	}
	.navbar-left, .navbar-right {
		float: none !important;
	}
	.navbar-toggle {
		display: block;
	}
	.navbar-collapse {
		border-top: 1px solid transparent;
		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
	}
	.navbar-fixed-top {
		top: 0;
		border-width: 0 0 1px;
	}
	.navbar-collapse.collapse {
		display: none !important;
	}
	.navbar-nav {
		float: none !important;
		margin-top: 7.5px;
	}
	.navbar-nav>li {
		float: none;
	}
	.navbar-nav>li>a {
		padding-top: 10px;
		padding-bottom: 10px;
	}
	.collapse.in {
		display: block !important;
	}
}

